tests/reference/asr-matrix_matmul_05-2c184d5.stderr
warning: Implied save feature
 --> tests/errors/matrix_matmul_05.f90:3:5
  |
3 |     integer :: a(3, 3)
  |     ^^^^^^^^^^^^^^^^^^ Assuming save attribute implicitly for variables

warning: Implied save feature
 --> tests/errors/matrix_matmul_05.f90:4:5
  |
4 |     integer :: b(3, 3, 3, 3)
  |     ^^^^^^^^^^^^^^^^^^^^^^^^ Assuming save attribute implicitly for variables

semantic error: matmul accepts arrays of rank 1 or 2 only, provided an array with rank, 4
 --> tests/errors/matrix_matmul_05.f90:5:24
  |
5 |     print *, matmul(a, b)
  |                        ^ 
